p3/confs/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground
  namespace: dev
spec:
  selector:
    app: playground
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
